<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="110dp"
        tools:layout_editor_absoluteY="326dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            tools:context=".warehouse.AddRackFragment">


            <TextView
                android:id="@+id/aisle_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aisle_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edit_text_aisle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/aisle_label"
                app:layout_constraintTop_toBottomOf="@+id/aisle_label"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/unit_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/unit_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_aisle" />

            <EditText
                android:id="@+id/edit_text_unit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/unit_label"
                app:layout_constraintTop_toBottomOf="@+id/unit_label"
                android:importantForAutofill="no" />

            <Button
                android:id="@+id/confirm_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/confirm"
                app:layout_constraintEnd_toEndOf="@+id/edit_text_unit"
                app:layout_constraintStart_toEndOf="@+id/cancel_btn"
                app:layout_constraintTop_toTopOf="@+id/cancel_btn" />

            <Button
                android:id="@+id/cancel_btn"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="10dp"
                android:text="@string/cancel"
                app:layout_constraintEnd_toStartOf="@+id/confirm_btn"
                app:layout_constraintStart_toStartOf="@+id/edit_text_unit"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_unit" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>