<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>
    <variable
        name="editRackViewModel"
        type="com.example.kuboss.warehouse.RackDetailsViewModel" />
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            tools:context=".warehouse.EditRackFragment">


            <Button
                android:id="@+id/btnDeleteRack"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/delete"
                android:textColor="@color/design_default_color_error"
                app:layout_constraintEnd_toEndOf="@+id/btnCancel"
                app:layout_constraintStart_toStartOf="@+id/btnCancel"
                app:layout_constraintTop_toBottomOf="@+id/btnCancel"
                app:strokeColor="@color/design_default_color_error" />

            <TextView
                android:id="@+id/rackId_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{@string/rack_id(editRackViewModel.rackId)}"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Rack ID: 01-AA" />

            <Button
                android:id="@+id/btnCancel"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/cancel"
                app:layout_constraintEnd_toEndOf="@+id/btnSave"
                app:layout_constraintStart_toStartOf="@+id/btnSave"
                app:layout_constraintTop_toBottomOf="@+id/btnSave" />

            <Button
                android:id="@+id/btnSave"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/confirm"
                app:layout_constraintEnd_toEndOf="@+id/editing_edit_text_unit"
                app:layout_constraintStart_toStartOf="@+id/editing_edit_text_unit"
                app:layout_constraintTop_toBottomOf="@+id/editing_edit_text_unit" />

            <TextView
                android:id="@+id/editing_aisle_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/new_aisle_number"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintStart_toStartOf="@+id/rackId_text_view"
                app:layout_constraintTop_toBottomOf="@+id/rackId_text_view" />

            <EditText
                android:id="@+id/editing_edit_text_aisle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/editing_aisle_label"
                app:layout_constraintTop_toBottomOf="@+id/editing_aisle_label"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/editing_unit_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/new_unit"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintStart_toStartOf="@+id/editing_edit_text_aisle"
                app:layout_constraintTop_toBottomOf="@+id/editing_edit_text_aisle" />

            <EditText
                android:id="@+id/editing_edit_text_unit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/editing_unit_label"
                app:layout_constraintTop_toBottomOf="@+id/editing_unit_label"
                android:importantForAutofill="no" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>